--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -28,6 +28,7 @@
 @import "components/alliance_page_ship_overview";
 @import "components/alliance_attacks";
 @import "components/history";
+@import "components/page_journal";
 @import "components/news";
 @import "components/bcalc";
 @import "components/scans";
