--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -49,8 +49,8 @@ input[type="checkbox"] {
   -moz-appearance: none;
   -o-appearance: none;
   appearance: none;
-  width: 1rem;
-  height: 1rem;
+  width: 1.5rem;
+  height: 1.5rem;
   background-color: $color-borders;
   cursor: pointer;
   outline: none;
@@ -63,7 +63,8 @@ input[type="checkbox"] {
     color: $color-primary;
     font-size: 1.2rem;
     position: absolute;
-    top: -0.5rem;
+    top: -.125rem;
+    left: .125rem;
   }
 }
 
