--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -94,6 +94,11 @@ body {
   background-color: $color-background;
 }
 
+p {
+  margin: 0;
+  padding: 0 0 .5rem 0;
+}
+
 th {
   font-size: $text-small;
   text-transform: uppercase;
