--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -93,6 +93,10 @@ h2 {
   .maintext {
     text-align: center;
 
+    a.notice_warning {
+      color: $color-negative;
+    }
+
     > br {
       &:last-child {
         display: none;
