--- a/scss/components/_research_construction_waves.scss
+++ b/scss/components/_research_construction_waves.scss
@@ -141,6 +141,10 @@
       order: 2;
       width: 67%;
 
+      &:nth-of-type(2) {
+        order: 4;
+      }
+
       li {
         display: inline-block;
 
@@ -157,17 +161,29 @@
       justify-content: flex-end;
       order: 1;
 
+      &:nth-of-type(2) {
+        order: 2;
+      }
+
       &.queueform {
         order: 3;
       }
 
-      input[type="submit"] {
-        min-width: 110px;
+      input {
+        &[type="checkbox"] {
+          margin-right: .5rem;
+        }
+
+        &[type="submit"] {
+          min-width: 110px;
+        }
       }
 
       p {
         text-align: right;
         padding: 0;
+        display: flex;
+        align-items: center;
       }
     }
   }
