--- a/scss/components/_planet_details.scss
+++ b/scss/components/_planet_details.scss
@@ -44,7 +44,7 @@
       background: $color-primary;
 
       a {
-        color: black;
+        color: black !important;
       }
     }
 
@@ -55,7 +55,7 @@
       text-transform: uppercase;
       font-weight: bold;
       padding: .5rem 0 !important;
-      color: $color-offwhite;
+      color: $color-offwhite !important;
       transition: ease all .5s;
     }
   }
