--- a/scss/components/_scans.scss
+++ b/scss/components/_scans.scss
@@ -16,6 +16,7 @@
               th {
                 padding: .5rem .125rem;
                 background: $color-background;
+                text-align: center;
               }
             }
 
