--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -222,7 +222,7 @@
               order: 4;
               width: 70px;
               justify-content: flex-end;
-              align-items: center;
+              align-items: flex-end;
 
               &:before {
                 content: "Reported:";
