--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -78,8 +78,8 @@ h2 {
 
 
 #notice {
-  background-color: black;
-  padding: .75rem;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0) 100%);
+  padding: .5rem;
   margin-top: .5rem;
   border: 1px solid transparent;
   border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, .5) 50%, transparent 100%);
@@ -92,9 +92,15 @@ h2 {
 
   .maintext {
     text-align: center;
+    padding: 0;
+    font-size: .9rem;
 
-    a.notice_warning {
-      color: $color-negative;
+    a {
+      font-weight: normal;
+
+      &.notice_warning {
+        color: $color-negative;
+      }
     }
 
     > br {
