--- a/scss/components/_page_content.scss
+++ b/scss/components/_page_content.scss
@@ -99,7 +99,7 @@ h2 {
       font-weight: normal;
 
       &.notice_warning {
-        color: $color-negative;
+        color: white;
         opacity: 0.75;
       }
     }
