--- a/scss/components/_universe.scss
+++ b/scss/components/_universe.scss
@@ -252,8 +252,14 @@
 		}
 	  }
 
+	  .moc {
+		color: #00b7ff;
+		font-weight: bold;
+	  }
+
 	  .gc {
-		color: $color-gc;
+		color: #00e413;
+		font-weight: bold;
 	  }
 
 	  a,
